--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
             <form action="">
                 <input type="text" id="dateArrival" placeholder="Date d'arrivée">
                 <input type="text" id="dateDepart" placeholder="Date de départ">
+                <div class='col-sm-6'>
+                    <div class="form-group">
+                        <div class='input-group date' id='datetimepicker1'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                        </div>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    $(function () {
+                        $('#datetimepicker1').datetimepicker();
+                    });
+                </script>
+        </div>
                 <button class="btn btn-custom">Je déménage</button>
             </form>
         </div>
