--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/about.css">
-	<title>Gros Bras - A propos</title>
+    <title>Gros Bras - A propos</title>
 
 </head>
 <body>
@@ -23,42 +23,38 @@
         </div>
     </header>
 
-<!--MARK SECTION-->
+    <!--MARK SECTION-->
 
-	
-			<div class="container">
-				<div class="row">
-					<h2 id="about">NOS VALEURS</h2>
-					<hr class="separator">
 
-<section class="valeur container">
-<div class="row">
-				<div class="col bordureJaune section1">
-					<img class="imgvaleur" src="bootstrap/img/medal.png" alt="quality" width="200">
-					<h2>Sécurité</h2>
-					<p>Vos objets sont assurés</p>
-					
-				</div>
+    <div class="container-fluid">
+        <!--<div class="row">-->
+            <h2 id="about">NOS VALEURS</h2>
+            <hr class="separator">
 
-				<div class="col bordureJaune section2 ">
-				<img class="imgvaleur" src="bootstrap/img/dollar-symbol.png" alt="quality" width="200">
-					<h2>Qualité</h2>
-					<p>Les matériaux utilisés sont de qualités, de même que pour nos 
-					déménageurs qui sont formés et expert dans la matière</p>
+            <section class="valeur container">
+                <div class="row">
+                    <div class="col-md-4 bordureJaune section1">
+                        <img class="imgvaleur" src="bootstrap/img/medal.png" alt="quality" width="200">
+                        <h2>Sécurité</h2>
+                        <p>Vos objets sont assurés</p>
+                    </div>
 
-				</div>
+                    <div class="col-md-4 bordureJaune section2 ">
+                        <img class="imgvaleur" src="bootstrap/img/dollar-symbol.png" alt="quality" width="200">
+                        <h2>Qualité</h2>
+                        <p>Les matériaux utilisés sont de qualités, de même que pour nos
+                            déménageurs qui sont formés et expert dans la matière</p>
+                    </div>
 
-				<div class="col bordureJaune section3">
-				<img class="imgvaleur" src="bootstrap/img/heart.png" alt="quality" width="200">
-					<h2>Confiance</h2>
-					<p> Vos effigies personnels restent entre nous.</p>
-				</div>
-
-	</section>
-				</div>
-			</div>
-
-		
+                    <div class="col-md-4 bordureJaune section3">
+                        <img class="imgvaleur" src="bootstrap/img/heart.png" alt="quality" width="200">
+                        <h2>Confiance</h2>
+                        <p> Vos effigies personnels restent entre nous.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    <!--</div>-->
 
 
     <!--MARK FOOTER-->
