--- a/about.html
+++ b/about.html
@@ -27,7 +27,6 @@
 
 
     <div class="container-fluid">
-        <!--<div class="row">-->
             <h2 id="about">NOS VALEURS</h2>
             <hr class="separator">
 
@@ -40,21 +39,20 @@
                     </div>
 
                     <div class="col-md-4 bordureJaune section2 ">
-                        <img class="imgvaleur" src="bootstrap/img/dollar-symbol.png" alt="quality" width="200">
+                        <img class="imgvaleur" src="img/dollar-symbol.png" alt="quality" width="200">
                         <h2>Qualité</h2>
                         <p>Les matériaux utilisés sont de qualités, de même que pour nos
                             déménageurs qui sont formés et expert dans la matière</p>
                     </div>
 
                     <div class="col-md-4 bordureJaune section3">
-                        <img class="imgvaleur" src="bootstrap/img/heart.png" alt="quality" width="200">
+                        <img class="imgvaleur" src="img/heart.png" alt="quality" width="200">
                         <h2>Confiance</h2>
                         <p> Vos effigies personnels restent entre nous.</p>
                     </div>
                 </div>
             </section>
         </div>
-    <!--</div>-->
 
 
     <!--MARK FOOTER-->
