--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/freelancer.min.css">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -36,38 +36,19 @@
                         <li class="active"><a href="#">Accueil<span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Nos Offres</a></li>
                         <li><a href="about.html">À Propos</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Je m'inscrit</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-
-        <!--<div class="container">-->
-        <!--<div class="col-md-4">-->
-        <!--<a href="#" id="logoSite">Mon Site</a>-->
-        <!--</div>-->
-        <!--<div class="contact_container col-md-4 hidden-xs hidden-sm">-->
-        <!--<p>-->
-        <!--<span>Besoin d'assistance ?</span><br>-->
-        <!--<a href="tel:01234567" id="contact_tel" title="Contactez-nous"><span>01 23 45 67 89</span></a>-->
-        <!--</p>-->
-        <!--</div>-->
-        <!--<nav class="menu">-->
-        <!--<a href="#">Accueil</a> |-->
-        <!--<a href="#">Nos offres</a> |-->
-        <!--<a href="#">À Propos</a> |-->
-        <!--<a href="#">Contact</a>-->
-        <!--</nav>-->
-        <!--</div>-->
     </header>
     <!--MARK HERO BANNER-->
     <section class="container-fluid banner">
         <div class="container inner-banner">
-            <form action="" class="col-md-offset-4 col-md-4 formAccueil">
+            <form action="" class="col-md-offset-3 col-md-6 formAccueil">
                 <div class="form-group">
-                    <label class="sr-only" for="depart">Date de départ</label>
-                    <label class="sr-only" for="arrivee">Date d'arrivée</label>
+                    <label class="sr-only" for="depart">Adresse de départ</label>
+                    <label class="sr-only" for="arrivee">Adresse d'arrivée</label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <input type="text" class="form-control" id="depart" placeholder="Adresse de départ">
@@ -77,9 +58,9 @@
                         </div>
                     </div>
                     <div class='input-group date' id='datetimepicker1'>
-                        <input type='text' class="form-control" placeholder="Date de départ"/>
+                        <input type='date' class="form-control" placeholder="Date de départ"/>
                         <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-calendar"></span>
+                            <span class="glyphicon glyphicon-calendar" style="border-radius: 3px"></span>
                         </span>
                     </div>
                 </div>
@@ -93,7 +74,7 @@
     <section class="container-fluid function">
         <div class="row">
             <div class="col-md-4 col-lg-4 col-xs-12">
-                <img src="" alt="" class="funcImageRight " style="width: 100%; height: 50px; background-color: red;">
+                <img src="" alt="" class="funcImageRight ">
             </div>
             <div class="col-md-8 col-lg-8 col-xs-12">
                 <p class="funcTextLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -122,23 +103,23 @@
     <section class="container-fluid usp">
         <h2>Nos Valeurs</h2>
         <hr class="separator">
-        <div class="row">
+        <div class="row inner-usp">
             <div class="col-md-4 bordureJaune section1">
                 <img class="imgvaleur" src="img/medal.png" alt="quality">
-                <h2>Sécurité</h2>
+                <h3>Sécurité</h3>
                 <p>Vos objets sont assurés</p>
             </div>
 
             <div class="col-md-4 bordureJaune section2 ">
                 <img class="imgvaleur" src="img/dollar-symbol.png" alt="quality">
-                <h2>Qualité</h2>
+                <h3>Qualité</h3>
                 <p>Les matériaux utilisés sont de qualités, de même que pour nos
                     déménageurs qui sont formés et expert dans la matière</p>
             </div>
 
             <div class="col-md-4 bordureJaune section3">
                 <img class="imgvaleur" src="img/heart.png" alt="quality">
-                <h2>Confiance</h2>
+                <h3>Confiance</h3>
                 <p> Vos effigies personnels restent entre nous.</p>
             </div>
         </div>
