index change + bye agency.min.css

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                 <button class="btn btn-custom">Je déménage</button>
             </form>
         </div>
-
-        </div>
     </section>
     <!--MARK COMMENT CA MARCHE-->
     <section class="container-fluid function">
+        <h2>Comment ça marche ?</h2>
+        <hr class="separator2">
         <div class="row">
             <div class="col-md-4 col-lg-4 col-xs-12">
                 <img src="" alt="" class="funcImageRight ">
@@ -102,7 +102,7 @@
     <!--MARK VALEURS-->
     <section class="container-fluid usp">
         <h2>Nos Valeurs</h2>
-        <hr class="separator">
+        <hr class="separator1">
         <div class="row inner-usp">
             <div class="col-md-4 bordureJaune section1">
                 <img class="imgvaleur" src="img/medal.png" alt="quality">
