--- a/about.html
+++ b/about.html
@@ -4,56 +4,187 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap/css/about.css">
-    <title>Gros Bras - A propos</title>
-
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/freelancer.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-about.css">
+    <title>A propos de nous !</title>
 </head>
 <body>
     <!--MARK HEADER-->
     <header class="container-fluid header">
-        <div class="container">
-            <a href="#" class="logo">Mon Site</a>
-            <nav class="menu">
-                <a href="#">Accueil</a> |
-                <a href="#">Nos offres</a> |
-                <a href="#">À Propos</a> |
-                <a href="#">Contact</a>
-            </nav>
-        </div>
+        <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand logoSite" href="index.html">
+                        Les Gros Bras
+                    </a>
+                </div>
+                <div class="navbar-text hidden-sm hidden-xs">
+                    <span>Besoin d'assistance ?</span>
+                    <a href="tel:01234567" id="contact_tel" title="Contactez-nous">01 23 45 67 89</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-nav-custom">
+                        <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
+                        <li><a href="nosoffres.html">Nos Offres</a></li>
+                        <li  class="active"><a href="about.html">À Propos</a></li>
+                        <li><a href="#">Je m'inscris</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!--MARK SECTION-->
 
+    <!-- STORY TELLING -->
 
-    <div class="container-fluid">
-            <h2 id="about">NOS VALEURS</h2>
-            <hr class="separator">
+    <div class="container-fluid inner-cont">
+        <h2 id="about">NOTRE HISTOIRE</h2>
+        <hr class="separator3">
+        <section class="valeur container">
+            <div class="row">
+                <div class="col-md-7">
 
-            <section class="valeur container">
-                <div class="row">
-                    <div class="col-md-4 bordureJaune section1">
-                        <img class="imgvaleur" src="bootstrap/img/medal.png" alt="quality" width="200">
-                        <h2>Sécurité</h2>
-                        <p>Vos objets sont assurés</p>
-                    </div>
+                    <p class="histoire">
+                        C'est l'histoire de trois gros bras, constitué de trois étudiants diplômés de l'IIM, l'ESILV et
+                        l'EMLV. En créant les Gros bras, ils ont apporté leur sens de l’innovation dans un secteur du
+                        déménagement encore très traditionnel.
 
-                    <div class="col-md-4 bordureJaune section2 ">
-                        <img class="imgvaleur" src="img/dollar-symbol.png" alt="quality" width="200">
-                        <h2>Qualité</h2>
-                        <p>Les matériaux utilisés sont de qualités, de même que pour nos
-                            déménageurs qui sont formés et expert dans la matière</p>
-                    </div>
+                        Ils se sont entourés de plusieurs autres gros bras, experts en déménagement, pour vous offrir THE
+                        BEST service.
+                        <br><br>
 
-                    <div class="col-md-4 bordureJaune section3">
-                        <img class="imgvaleur" src="img/heart.png" alt="quality" width="200">
-                        <h2>Confiance</h2>
-                        <p> Vos effigies personnels restent entre nous.</p>
+                        <img class="imgvaleur" src="img/strong.png" alt="quality" width="100">
+                        <img class="imgvaleur" src="img/strong.png" alt="quality" width="100">
+                        <img class="imgvaleur" src="img/strong.png" alt="quality" width="100">
+
+                        <br><br>
+
+                        Ainsi en 2012, Les Gros Bras ré-invente le déménagement dans une volonté de transparence et de
+                        simplification des démarches.
+
+                        Prenant en considération toutes les contraintes liées à la réalisation d’un déménagement, nous
+                        exploitons les nouvelles technologies afin de proposer des outils innovants au service de ses
+                        clients. Et parce que la technologie n’est rien sans l’humain, nous avons placé au cœur de son
+                        service des experts en déménagement, qui accompagnent chaque client jusqu’à leur emménagement.
+
+                        Fort de notre succès, nous avons organisé plusieurs milliers de déménagements de particuliers et de
+                        transferts d’entreprise. Afin de répondre au mieux à la demande, nous avons développé un vaste réseau
+                        de déménageurs répartis dans toute l'Île de France.</p><br><br>
+                </div>
+                <div class="col-md-4">
+                    <img class="imgvaleur" src="img/ban1.jpg" alt="quality">
+                </div>
+        </section>
+    </div>
+
+
+    <!-- VALEURS -->
+
+    <div class="container-fluid inner-cont">
+
+        <h2 id="about">NOS VALEURS</h2>
+        <hr class="separator3">
+
+        <section class="valeur container">
+            <div class="row">
+                <div class="col-md-4 bordureJaune section1">
+                    <img class="imgvaleur" src="img/dollar-symbol.png" width="200">
+                    <h2>Sécurité</h2>
+                    <p>Garantie vol et casse<br>
+                        Données personnelles sécurisées<br>
+                        Assistance H24 en cas de panne
+                    </p>
+                </div>
+
+                <div class="col-md-4 bordureJaune section2 ">
+                    <img class="imgvaleur" src="img/medal.png" alt="quality" alt="quality" width="200">
+                    <h2>Qualité</h2>
+                    <p>Sélection de devis sur mesure<br>
+                        Suivi qualité systématique<br>
+                        Professionnels certifiés<br>
+                        Matériaux écologiques et recyclables</p>
+                </div>
+
+                <div class="col-md-4 bordureJaune section3">
+                    <img class="imgvaleur" src="img/heart.png" alt="quality" width="200">
+                    <h2>Confiance</h2>
+                    <p> Informations non divulguées à autrui<br>
+                        Conseils personnalisés<br>
+                        Aucun surcoût le jour du déménagement<br>
+                        Réduction des retours à vide.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- US -->
+
+    <div class="container-fluid inner-cont">
+        <h2 id="about">ENVIE DE NOUS REJOINDRE ?</h2>
+        <hr class="separator3">
+        <section class="valeur container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-area">
+                        <form role="form">
+                            <br style="clear:both">
+                            <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Nom Prénom"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Téléphone"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <input type="file" class="form-control" id="subject" name="subject" placeholder="Subject"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" type="textarea" id="message" placeholder="Vos motivations"
+                                          maxlength="140" rows="7"></textarea>
+                                <span class="help-block">
+                        <p id="characterLeft" class="help-block ">You have reached the limit</p>
+                     </span>
+                            </div>
+                            <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer
+                            </button>
+                        </form>
                     </div>
                 </div>
-            </section>
-        </div>
 
+                <div class="col-md-5 col-md-offset-1 recrute">
+                    <p>Si toi aussi t'a des gros bras, fort et puissant et que tu veux te faire des sous, alors nous sommes
+                        prêt à t'accueillir.
+                        Nous recrutons des gros balèzes ! Tu peux t'abonner pour recevoir toutes nos offres ou alors nous
+                        envoyer ta candidature spontanée. <br><br><br>
+
+                        En ce moment, nous recherchons :<br><br>
+
+                        - 5 déménégeurs(euses)<br>
+                        - 3 assistants(es) au SAV<br>
+                        - 2 community manager<br>
+                        - 1 stagiaire assistant communication<br>
+                        - 1 commercial </p>
+                </div>
+            </div>
+        </section>
+
+    </div>
 
     <!--MARK FOOTER-->
     <footer class="container-fluid footer">
