--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand logoSite" href="#">
+                    <a class="navbar-brand logoSite" href="index.html">
                         Les Gros Bras
                     </a>
                 </div>
@@ -33,10 +33,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-nav-custom">
-                        <li class="active"><a href="#">Accueil<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Nos Offres</a></li>
+                        <li class="active"><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
+                        <li><a href="nosoffres.html">Nos Offres</a></li>
                         <li><a href="about.html">À Propos</a></li>
-                        <li><a href="#">Je m'inscrit</a></li>
+                        <li><a href="#">Je m'inscris</a></li>
                     </ul>
                 </div>
             </div>
@@ -70,33 +70,59 @@
     </section>
     <!--MARK COMMENT CA MARCHE-->
     <section class="container-fluid function">
-        <h2>Comment ça marche ?</h2>
-        <hr class="separator2">
-        <div class="row">
-            <div class="col-md-4 col-lg-4 col-xs-12">
-                <img src="" alt="" class="funcImageRight ">
-            </div>
-            <div class="col-md-8 col-lg-8 col-xs-12">
-                <p class="funcTextLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="row comment-ca-marche">
+            <h3 class="text-center">Comment ça marche ?</h3>
+            <hr class="separator2">
+        </div>
+        <div class="col-sm-3">
+            <div class="text-center">
+                <p>
+                    <img class="imghover img-responsive center-block" src="img/003-smartphone.png" alt="expertise">
+                </p>
+                <p>
+                    Nous évaluons votre <b>besoin</b> <br>
+
+                </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-4 col-lg-4 col-xs-12">
-                <p class="funcTextRight">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita hic impedit ipsa
-                    natus nobis porro praesentium quae quisquam veritatis voluptates.</p>
-            </div>
-            <div class="col-md-8 col-lg-8 col-xs-12">
-                <img src="" alt="" class="funcImageLeft">
+        <div class="col-sm-3">
+            <div class="text-center">
+                <p>
+                    <img class="imghover img-responsive center-block" src="img/002-laptop.png" alt="recherche">
+                </p>
+                <p>
+                    Vous choisissez <b>l'offre</b> qui vous convient
+
+                    <br>
+
+                </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-4 col-lg-4 col-xs-12">
-                <img src="" alt="" class="funcImageRight">
+        <div class="col-sm-3">
+            <div class="text-center">
+                <p>
+                    <img class="imghover img-responsive center-block" src="img/001-changing.png" alt="move">
+                </p>
+                <p>
+                    Vous remplissez<b> le formulaire en ligne </b> et vous serez appelés.
+
+                    <br>
+
+                </p>
             </div>
-            <div class="col-md-8 col-lg-8 col-xs-12">
-                <p class="funcTextLeft">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ea esse libero
-                    officiis rerum voluptates.</p>
+        </div>
+        <div class="col-sm-3">
+            <div class="text-center">
+                <p>
+                    <img class="imghover img-responsive center-block" src="img/review.png" alt="Rating ">
+                </p>
+                <p>
+                    Vous laissez un
+                    <b>avis</b>
+                    sur notre service.
+                </p>
             </div>
+        </div>
         </div>
     </section>
     <!--MARK VALEURS-->
@@ -126,10 +152,29 @@
     </section>
     <!--MARK FOOTER-->
     <footer class="container-fluid footer">
-        
+        <div class="row">
+            <div class=" col-md-offset-2 col-md-3 col-sm-2 col-xs-12">
+                <a href="mentionslegales.html" target="_blank" class="footerA"><h3 class="footcol">Mentions Légales</h3></a>
+            </div>
+            <div class=" col-md-2 col-sm-2 col-xs-12">
+                <h3 class="footcol">Contact</h3>
+            </div>
+            <div class="soccol col-md-2 col-sm-2 col-xs-12">
+                <div class="container-fluid">
+                    <div class="col-md-4">
+                        <a href="#"><img src="img/facebook-letter-logo.svg" alt="Facebook Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#"><img src="img/twitter-logo.svg" alt="Twitter Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#"><img src="img/linkedin-logo.svg" alt="LinkedIn Logo"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
 </body>
 </html>
